--- a/app/src/main/res/layout/one.xml
+++ b/app/src/main/res/layout/one.xml
@@ -25,4 +25,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <View
+        android:id="@+id/view_generator"
+        android:layout_width="190dp"
+        android:layout_height="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view2"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
