--- a/app/src/main/res/anim/progress_show.xml
+++ b/app/src/main/res/anim/progress_show.xml
@@ -1,6 +1,3 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
-        android:duration="1000"
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0" />
+    <!--ｎｏ░ａｎｉｍａｔｉｏｎｓ░ｐｌｉｚ　（押媛の）-->
 </set>
