--- a/app/src/main/res/anim/slide_in.xml
+++ b/app/src/main/res/anim/slide_in.xml
@@ -1,8 +1,4 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
-        android:duration="1000"
-        android:fromYDelta="100%"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:toYDelta="0" />
+    <!--ｎｏ░ａｎｉｍａｔｉｏｎｓ░ｐｌｉｚ　（押媛の）-->
 
 </set>
