--- a/app/src/main/res/layout/custom_bottom_progress.xml
+++ b/app/src/main/res/layout/custom_bottom_progress.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#33000000"
+    android:background="#88000000"
     android:clickable="true"
     android:focusable="true">
 
@@ -15,20 +15,20 @@
 
     <FrameLayout
         android:id="@+id/progress_container"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/round_frame_bg_circle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+
         app:layout_constraintBottom_toBottomOf="@id/guide"
         app:layout_constraintEnd_toEndOf="parent"
         android:elevation="10dp"
         app:layout_constraintStart_toStartOf="parent">
 
-        <ProgressBar
+        <ImageView
             android:id="@+id/progress_bar"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
-            android:indeterminate="true" />
+            android:src="@drawable/loading" />
     </FrameLayout>
 
 
