--- a/app/src/main/res/layout/dialog_generated_ether.xml
+++ b/app/src/main/res/layout/dialog_generated_ether.xml
@@ -44,6 +44,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="18dp"
                 android:layout_marginEnd="18dp"
+                android:gravity="center"
                 app:layout_constraintEnd_toStartOf="@id/x"
                 android:text="ｅｔｈｅｒ░（ブ陰つ）　（コ代ず）"
                 android:textColor="#ffffff"/>
@@ -69,13 +70,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </ScrollView>
-        <Button
+        <ImageView
             android:id="@+id/dialog_default_ok"
-            style="@style/AppTheme.BottomButtonsOKCancel"
+            android:background="@drawable/ok"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="8dp"
             android:text="𝔬Ќ  👍♠" />
 
 
