--- a/app/src/main/res/layout/one.xml
+++ b/app/src/main/res/layout/one.xml
@@ -26,6 +26,13 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <View
         android:id="@+id/view_generator"
         android:layout_width="190dp"
         android:layout_height="70dp"
