ｏｖｅｎ░ｉｓ░ｎｏｗ░ｆｉｘｅｄ　（猿宇駅臆）

--- a/app/src/main/res/layout/one.xml
+++ b/app/src/main/res/layout/one.xml
@@ -39,4 +39,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view2"/>
 
+    <View
+        android:id="@+id/view_bend"
+        android:layout_width="190dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="120dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/view3"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
