--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,7 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">fancy-generator.com</domain>
-
+        <domain includeSubdomains="true">54.72.86.60</domain>
 
     </domain-config>
 
